small bug fix refs #93960 @0:15